# daily-task-tracker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: database.py  main.py  schemas.py
frontend/: app.py  backend_launcher.py
frontend/services/: api.py  placeholder_data.py  task_service.py
frontend/ui/: daily_task_view.py  form_view.py  task_card.py  task_list_view.py
